crates/aura-app/tests/ui/harness_ui_operation_handle_private_fields.stderr
error[E0451]: fields `operation_id` and `instance_id` of struct `HarnessUiOperationHandle` are private
 --> tests/ui/harness_ui_operation_handle_private_fields.rs:5:9
  |
4 |     let _handle = HarnessUiOperationHandle {
  |                   ------------------------ in this type
5 |         operation_id: OperationId::send_message(),
  |         ^^^^^^^^^^^^ private field
6 |         instance_id: OperationInstanceId("instance-1".to_string()),
  |         ^^^^^^^^^^^ private field
