crates/aura-app/tests/ui/harness_ui_operation_handle_private_fields.rs
use aura_app::ui_contract::{HarnessUiOperationHandle, OperationId, OperationInstanceId};

fn main() {
    let _handle = HarnessUiOperationHandle {
        operation_id: OperationId::send_message(),
        instance_id: OperationInstanceId("instance-1".to_string()),
    };
}
